# try-NickelEngine-android-build

./: .gitignore  ReadMe.md
android-project/: build-and-run.cmd  local.properties
android-project/app/: build.gradle
android-project/app/jni/: CMakeLists.txt  main.cpp
android-project/app/jni/engine/engine/3rdlibs/SDL/src/hidapi/windows/test/: CMakeLists.txt
android-project/app/src/main/java/com/visualgmq/nickelengine/: NickelengineActivity.java
android-project/app/src/main/res/layout/: activity_main.xml
android-project/gradle/wrapper/: gradle-wrapper.properties
engine/cmake/: compile_shader.cmake
